--- a/MciobanuWcfService02/MciobanuWcfService02/MciobanuWcfService02.csproj
+++ b/MciobanuWcfService02/MciobanuWcfService02/MciobanuWcfService02.csproj
@@ -78,6 +78,7 @@
     <Folder Include="App_Data\" />
   </ItemGroup>
   <ItemGroup>
+    <None Include="Properties\PublishProfiles\mciobanu-test-wcf02.pubxml" />
     <None Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
     </None>
